--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 Werkzeug==1.0.1
+numpy==1.23.5
+nltk==3.8.1
+tensorflow==2.12.0
+scikit-learn==1.2.2
+
